@startuml

title __VEHICLE's Class Diagram__\n

  namespace org.optaweb.vehiclerouting {
    namespace service.vehicle {
      interface org.optaweb.vehiclerouting.service.vehicle.VehiclePlanner {
          {abstract} + addVehicle()
          {abstract} + changeCapacity()
          {abstract} + removeAllVehicles()
          {abstract} + removeVehicle()
      }
    }
  }
  

  namespace org.optaweb.vehiclerouting {
    namespace service.vehicle {
      interface org.optaweb.vehiclerouting.service.vehicle.VehicleRepository {
          {abstract} + changeCapacity()
          {abstract} + createVehicle()
          {abstract} + createVehicle()
          {abstract} + find()
          {abstract} + removeAll()
          {abstract} + removeVehicle()
          {abstract} + vehicles()
      }
    }
  }
  

  namespace org.optaweb.vehiclerouting {
    namespace service.vehicle {
      class org.optaweb.vehiclerouting.service.vehicle.VehicleService {
          {static} ~ DEFAULT_VEHICLE_CAPACITY : int
          + VehicleService()
          + addVehicle()
          + changeCapacity()
          + createVehicle()
          + createVehicle()
          + removeAll()
          + removeAnyVehicle()
          + removeVehicle()
      }
    }
  }
  

  org.optaweb.vehiclerouting.service.vehicle.VehicleService o-- org.optaweb.vehiclerouting.service.vehicle.VehiclePlanner : planner
  org.optaweb.vehiclerouting.service.vehicle.VehicleService o-- org.optaweb.vehiclerouting.service.vehicle.VehicleRepository : vehicleRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
